jquery headroom error resolved

--- a/portfolio.html
+++ b/portfolio.html
@@ -300,7 +300,7 @@
 	<script src="assets/js/jquery.isotope.min.js"></script>
     <script src="assets/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
 	<script src="assets/js/headroom.min.js"></script>
-	<script src="assets/js/jQuery.headroom.min.js"></script>
+	<script src="assets/js/jquery.headroom.min.js"></script>
 	<script src="assets/js/custom.js"></script>
 </body>
 </html>
