--- a/sidebar-right.html
+++ b/sidebar-right.html
@@ -186,7 +186,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 	<script src="assets/js/headroom.min.js"></script>
-	<script src="assets/js/jQuery.headroom.min.js"></script>
+	<script src="assets/js/jquery.headroom.min.js"></script>
 	<script src="assets/js/custom.js"></script>
 </body>
 </html>
